custome google form

--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-# ការពញ្ចូលទិន្ន័ទៅកាន់ Google form ពីវែបសាយផ្ទាល់ខ្លួន
-# Submit Google Form From You Own Website
-
----
-#### Simple Ajax Post is Credit to:
-[https://github.com/jsdevel/google-form](https://github.com/jsdevel/google-form)
-
-index.html
-```html
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -15,7 +6,7 @@ index.html
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Customize Google Form and Submit from your own website.</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -60,50 +51,10 @@ index.html
           </div>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
-    <script src='js/submit-google-form.js'></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/bootstrap-validator/bootstrap-validator.min.js"></script>
+    <script src='js/google-form.js'></script>
+
   </body>
 </html>
-```
-
-submit-google-form.js
-for this we do need to validate input  first if it's validated we submit if not we do nothing.
-
-```js
-!function(exports) {
-  exports.submitGoogleForm = submitGoogleForm;
-  function submitGoogleForm(form) {
-    $('#contactForm').validator().on('submit', function (e) {
-      if (e.isDefaultPrevented()) {
-        // handle the invalid form...
-      } else {
-        try {
-          var data = [].slice.call(form).map(function(control) {
-            return 'value' in control && control.name ?
-              control.name + '=' + (control.value === undefined ? '' : control.value) :
-              '';
-          }).join('&');
-          var xhr = new XMLHttpRequest();
-
-          xhr.open('POST', form.action + '/formResponse', true);
-          xhr.setRequestHeader('Accept',
-              'application/xml, text/xml, */*; q=0.01');
-          xhr.setRequestHeader('Content-type',
-              'application/x-www-form-urlencoded; charset=UTF-8');
-          xhr.send(data);
-        } catch(e) {}
-
-        form.parentNode.className += ' submitted';
-        // document.getElementById("contactForm").reset();
-        window.location.href = window.location.href
-        return false;
-
-      }
-    })
-  }
-
-}(typeof module === 'undefined' ? window : module.exports);
-
-```
